--- a/http-comic-view/ht/style.css
+++ b/http-comic-view/ht/style.css
@@ -1,19 +1,19 @@
 ::-webkit-scrollbar{
-width:10px;
-height:5px;
+width:0.8rem;
+height:0.4rem;
 }
 ::-webkit-scrollbar-thumb{
 background-clip:padding-box;
 background-color:#000000aa;
 border:solid transparent;
-border-width:3px;
-border-radius:20px;
+border-width:0.2rem;
+border-radius:2rem;
 }
 ::-webkit-scrollbar-thumb:hover{
-background-color:#222222aa;
+background-color:#888888aa;
 }
 ::-webkit-scrollbar-thumb:active{
-background-color:#22222288;
+background-color:#88888888;
 }
 input::-webkit-outer-spin-button,input::-webkit-inner-spin-button,input[type=number]{
 -webkit-appearance:none;
@@ -23,10 +23,13 @@ margin:0;
 body{
 margin:0;
 background-color:#000;
+color:#ddd;
 font-family:sans-serif;
+overflow:auto;
+overflow:overlay;
 }
-img {
-width:100%;
+*{
+box-sizing:border-box;
 }
 a{
 text-decoration:none;
@@ -41,54 +44,51 @@ user-select:none;
 -webkit-touch-callout:none;
 }
 .hide{
-display:none !important;
-z-index:-10 !important;
+display:none;
 }
 .button{
-padding:5px;
+font-size:1rem;
+padding:0.4rem;
+margin:0.2rem;
 background-color:transparent;
-border:solid 1px;
+color:#ddd;
+border:none;
 cursor:pointer;
 display:flex;
 justify-content:center;
+align-items:center;
+position:relative;
+overflow:hidden;
+border-radius:2rem;
 }
 .button:hover,.button:focus-visible{
 background-color:#00000044;
+box-shadow:0 0 0.5rem rgba(0, 0, 0, 0.3);
 }
 .button:active{
 background-color:#00000022;
+box-shadow:0 0 0.5rem rgba(0, 0, 0, 0.3);
 }
 .button svg{
 fill:none;
 stroke:#ddd;
-stroke-width:1;
-width:30px;
-height:30px;
+stroke-width:2;
+width:1.8rem;
+height:1.8rem;
 }
 .switch{
 position:relative;
 display:inline-block;
-width:4em;
-height:1.5em;
-margin:2px;
+width:3rem;
+height:1.5rem;
 display:flex;
 align-content:center;
 }
 .switch input{ 
 opacity:0;
+display:none;
 width:0;
 height:0;
-}
-.sli{
-cursor:pointer;
-right:0;
-background-color:#ccc;
-}
-.sli:before{
-content:"";
-height:100%;
-width:60%;
-background-color:#888;
 }
 .sli,.sli:before{
 position:absolute;
@@ -97,25 +97,104 @@ top:0;left:0;bottom:0;
 transition:.25s;
 border-radius:25px;
 }
+.sli{
+cursor:pointer;
+right:0;
+background-color:#ccc;
+}
+.sli:before{
+content:"";
+height:80%;
+width:40%;
+top:10%;bottom:10%;left:6%;
+background-color:#888;
+}
+.sli:hover,.sli:focus-visible,.sli:active{
+box-shadow:0 0 0.5rem rgba(0,0,0,0.3);
+}
+
 .switch input:checked + .sli{
 background-color:#00cc88;
 }
 .switch input:checked + .sli:before{
--webkit-transform: translateX(70%);
--ms-transform: translateX(70%);
-transform: translateX(70%);
+-webkit-transform:translateX(122%);
+-ms-transform:translateX(122%);
+transform:translateX(122%);
+}
+.selectCon{
+position:relative;
+min-width:6rem;
+}
+.selectCon select{
+display:none;
+}
+.seTed{
+background-color:rgba(0,0,0,0.4);
+padding:0.25rem 0.5rem;
+padding-right:1.75rem;
+border-radius:0.5rem;
+cursor:pointer;
+}
+.seTed.show{
+border-radius:0.5rem 0.5rem 0 0;
+}
+.seTed::Before {
+content:"";
+position:absolute;
+top:0.75rem;
+right:0.5rem;
+border-width:0.4rem;
+border-style:solid;
+border-color:#8f8f8f transparent transparent transparent;
+}
+.seTed:hover,.seTed:focus-visible {
+background-color:#00000044;
+box-shadow:0 0 0.5rem rgba(0,0,0,0.3);
+}
+.seTed:active{
+background-color:#000000bb;
+box-shadow:0 0 0.5rem rgba(0,0,0,0.3);
+}
+.seCon{
+display:none;
+position:absolute;
+background-color:#000000aa;
+width:100%;
+max-height:16rem;
+padding:0.4rem 0;
+overflow-y:auto;
+font-size:0.9rem;
+box-shadow:0 0 0.5rem rgba(0,0,0,0.3);
+z-index:1;
+}
+.seCon.show{
+display:block;
+border-radius:0 0 0.5rem 0.5rem;
+}
+.seCC{
+padding:0.5rem;
+cursor:pointer;
+}
+.seCC:hover,.seCC:focus-visible {
+background-color:#000000;
+text-decoration:underline;
+}
+.seCC:active{
+background-color:#000000bb;
 }
 #navWarpper{
 background-color:#22222277;
+background:linear-gradient(180deg,#222222aa,#22222288,#22222277,#22222266,#22222200);
 color:#ddd;
 position:fixed;
-top:0;
+top:0;right:0;
+padding-bottom:0.4rem;
 overflow:hidden;
 width:100%;
 display:flex;
 flex-wrap:wrap;
 justify-content:center;
-align-items: center;
+align-items:center;
 z-index:1;
 }
 #imgWarpper .L{
@@ -136,87 +215,132 @@ left:50%;
 width:100%;
 z-index:0;
 }
-.imgContener{
+.imgContainer{
 display:flex;
 justify-content:center;
 align-items:center;
 height:100vh;
 }
-.imgContener > img{
+.imgContainer>img{
 object-fit:contain;
-width:100%;
-height:100%;
 }
 .containerWarpper{
-display:none;
 position:fixed;
-top:0; bottom:0; left:0; right:0;
+top:-120vh;bottom:120vh;left:0;right:0;
 background-color:#000000;
+background-color:transparent;
+background-color:#00000000;
+z-index:100;
+transition:500ms cubic-bezier(0.6, 0, 0.4, 1);
+visibility:hidden;
+}
+.containerWarpper.show{
+top:0;bottom:-500vh;
 background-color:#00000055;
-z-index:1000;
+visibility:visible;
 }
 .container{
 display:flex;
 flex-direction:column;
-align-items:center;
 justify-content:flex-start;
 align-content:flex-start;
-background-color:#bbbbbb;
-margin:50px auto auto;
+background-color:#222222;
+margin:10vh auto auto;
 padding:8px;
-border:3px solid;
-border-radius:10px;
-max-height:70vh;
+border:2px solid;
+border-radius:0.5rem;
 overflow:auto;
 width:75%;
+max-width:60rem;
+max-height:80vh;
+}
+.containerControl{
+display:flex;
+flex-direction:row-reverse;
+}
+.containerHead{
+width:100%;
+margin-bottom:0.4rem;
+display:flex;
+justify-content:space-between;
+align-items:flex-start;
+}
+.containerTitle{
+padding:0.25rem;
+font-size:1.2rem;
+flex-basis:100%;
+}
+.containerCon{
+width:100%;
+min-height:120px;
+font-size:1rem;
+overflow-y:auto;
+}
+.containerCon.scFlex{
+display:flex;
+}
+.containerCon.scFlex::before,.containerCon.scFlex::after{
+content:"";
+position:sticky;
+width:inherit;
+box-shadow:0 0 0.6rem 0.4rem #222222cc;
+z-index:1;
+}
+.containerCon.scFlex::before{
+margin-bottom:0.5rem;
+top:0;
+}
+.containerCon.scFlex::after{
+margin-top:0.5rem;
+bottom:0;
 }
 @media only screen and (max-width:400px) {
-.container {
+.container{
 margin:0;
 width:inherit;
-background-color:#ddddddbb;
+background-color:#222222bb;
+}
+.containerControl{
+flex-direction:column;
+}
+.containerCon.scFlex::before,.containerCon.scFlex::after{
+box-shadow:0 0 0.6rem 0.4rem #11111177;
 }
 }
 @media only screen and (max-height:500px) {
 .container {
 margin:auto;
 max-height:none;
-height:calc(100% - 22px);
-background-color:#ddddddbb;
+height:100vh;
+background-color:#222222bb;
+}
+.containerCon.scFlex::before,.containerCon.scFlex::after{
+box-shadow:0 0 0.6rem 0.4rem #11111177;
 }
 }
-#gotoContainer{
-flex-wrap:nowrap;
-max-width:800px;
-overflow-x:hidden;
+#goto{
+width:100%;
+background-color:#00000044;
+width:96%;
+margin:2%;
 }
-.gotoNode{
+#gotoOpen>*{
+font-size:1.8rem;
+}
+#settingsWarpper .containerCon{
+flex-direction:column;
+}
+.settingsList{
 display:inherit;
 justify-content:space-between;
 align-items:center;
-width:100%;
-padding:4px 0;
-}
-.gotoNode > input[type=number]{
-width:100%;
-}
-#settingsContainer{
-flex-wrap:nowrap;
-max-width:800px;
-overflow-x:hidden;
-}
-.settingsList{
-display:flex;
-justify-content:space-between;
-align-items:center;
 padding:4px;
-width:100%;
-border-bottom:1px solid #000;
+border-top:1px solid #ddd;
 }
-.settingsList:last-child{
-border-bottom:none;
+.settingsList:first-of-type{
+border-top:none;
 }
-.settingsNode{
+.settingsList>*{
 margin:0 4px;
 }
 #imgSize{
@@ -224,80 +348,106 @@ display:flex;
 flex-wrap:wrap;
 justify-content:flex-end;
 }
-#imgPos{
+#imgPos,#imgPos>*{
 display:flex;
 flex-wrap:wrap;
 justify-content:flex-end;
+flex-direction:column;
 }
-#imgPos > button{
-flex-basis:28%;
-}
-#folderList{
-flex-wrap:nowrap;
-}
-#folderListHead{
-width:100%;
-padding:4px;
-display:inherit;
-justify-content:space-between;
+#imgPos>*{
+flex-direction:row;
 }
 #folderListContainer{
 flex:1;
-display:inherit;
-border-radius:inherit;
-justify-content:space-evenly;
+flex-direction:row;
+border-radius:0.5rem;
+justify-content:center;
 flex-wrap:wrap;
-align-items:flex-start;
-overflow:auto;
 }
 .folderListNode{
-width:100px;
+width:7rem;
 min-width:50px;
+height:9rem;
 background-color:#888888;
-background-color:#00000055;
+background-color:#88888855;
 border-radius:inherit;
-margin:4px 8px;
+margin:0.5rem;
 padding:0;
+position:relative;
 border:none;
-max-height:135px;
 overflow:hidden;
-word-wrap:break-word;
-line-height:0;
+-webkit-line-clamp:2;
+line-clamp:2;
 }
-.folderListNode:hover,.folderListNode:focus{
-white-space:normal;
-max-height:none;
+.folderListNode:hover,.folderListNode:focus-visible{
+-webkit-line-clamp:initial;
+line-clamp:initial;
+
+}
+.folderListNodeActive{
+background-color:#555555;
+background-color:#000000aa;
 }
 .folderListNode img{
-height:80px;
+width:100%;
+height:100%;
 object-fit:cover;
 object-position:center;
-min-width:50px;
-border-radius:10px 10px 0 0;
+min-width:inherit;
 }
 .folderListNode div{
-color:#fff;
-margin:5px;
+color:#ffffff;
+background-color:#000000;
+background-color:#00000088;
+text-shadow:0 0 0.25rem #000000;
+width:100%;
+min-height:2.75rem;
+max-height:100%;
+position:absolute;
+bottom:0;
+padding:0.6rem 0.25rem 0 0.25rem;
+border-radius:inherit;
 text-align:initial;
-font-size:0.8em;
-line-height:normal;
+font-size:0.9rem;
+line-height:1.2rem;
 overflow:hidden;
 text-overflow:ellipsis;
+display:box;
+display:-webkit-box;
+-moz-box-orient:vertical;
+-webkit-box-orient:vertical;
+box-orient:vertical;
+-webkit-line-clamp:inherit;
+line-clamp:inherit;
+}
+
+#popWarpper{
+display:flex;
+flex-wrap:wrap;
+flex-direction:column-reverse;
+align-items:flex-end;
+position:fixed;
+bottom:1rem;right:1rem;left:1rem;
+}
+#popWarpper>*{
+background-color:#000;
+background-color:#00000088;
+color:#fff;
+color:#ffffffcc;
+padding:0.5rem;
+margin:0.5rem 0 0;
+border-radius:10px;
+text-align:right;
+text-overflow:ellipsis;
+overflow:hidden;
 white-space:nowrap;
+transition:1.8s linear;
+min-width:100px;
+max-width:50%;
 }
-#folderListHead > div{
-display:flex;
-flex-direction:column;
+#popWarpper>.loading{
+opacity:1;
 }
-#folderListHead > div > p{
-margin:8px;
-}
-#gotoOpen > *{
-font-size:20px;
-color:#ddd;
-display:flex;
-align-items:center;
-height:30px;
-min-height:30px;
-max-height:30px;
+#popWarpper>.remove,#popWarpper>.loaded,#popWarpper>.error{
+opacity:0;
 }
