--- a/http-comic-view/ht/style.css
+++ b/http-comic-view/ht/style.css
@@ -16,6 +16,7 @@ background-color:rgba(136,136,136,0.67);
 background-color:rgba(136,136,136,0.53);
 }
 input::-webkit-outer-spin-button,input::-webkit-inner-spin-button,input[type=number]{
+appearance:none;
 -webkit-appearance:none;
 -moz-appearance:textfield;
 margin:0;
